--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prettier": "prettier --write \"src/app/**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
     "audit": "auditjs ossi",
     "version": "auto-changelog -p && git add CHANGELOG.md",
-    "docs:json": "compodoc -p ./tsconfig.json -e json -d ."
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
