--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "audit": "auditjs ossi",
     "version": "auto-changelog -p && git add CHANGELOG.md",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -44,25 +46,27 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "~14.1.1",
-    "@angular/compiler-cli": "^14.1.0",
     "@angular-eslint/builder": "^14.0.0",
     "@angular-eslint/eslint-plugin": "^14.0.0",
     "@angular-eslint/eslint-plugin-template": "^14.0.0",
     "@angular-eslint/schematics": "^14.0.0",
     "@angular-eslint/template-parser": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2",
+    "@angular/cli": "~14.1.1",
+    "@angular/compiler-cli": "^14.1.0",
+    "@babel/core": "^7.18.10",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/angular": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/testing-library": "0.0.13",
     "@types/eslint": "8.2.0",
+    "@types/jasmine": "~4.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@typescript-eslint/eslint-plugin": "5.8.0",
@@ -70,6 +74,7 @@
     "@typescript-eslint/parser": "5.8.0",
     "auditjs": "^4.0.36",
     "auto-changelog": "^2.4.0",
+    "babel-loader": "^8.2.5",
     "codelyzer": "^6.0.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -77,14 +82,21 @@
     "eslint-plugin-jsdoc": "^37.4.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-storybook": "^0.5.13",
+    "jasmine-core": "~4.2.0",
     "jest": "^28.1.2",
     "jest-junit": "^14.0.0",
     "jest-preset-angular": "^12.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.6.2",
     "source-map-explorer": "^2.5.2",
     "testcafe": "^1.18.5",
     "testcafe-reporter-html": "^1.4.6",
-    "ts-node": "~8.3.0"
+    "ts-node": "~8.3.0",
+    "typescript": "~4.7.2"
   },
   "lint-staged": {
     "*.{js,json,css,scss,less,md,ts,html,component.html}": [
